install/tiberowebstudio/ingress-tb-sd.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tibero-studio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "1024"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  tls:
    - secretName: istio.hyperdata-nginx-ingress-nginx
  rules:
    -  http:
         paths:
           - path: /tiberowebstudio/(.*)
             pathType: ImplementationSpecific
             backend:
               serviceName: service-tibero-sd
               servicePort: 8000
    -  http:
         paths:
           - path: /static/(.*)
             pathType: ImplementationSpecific
             backend:
               serviceName: service-tibero-sd
               servicePort: 8000
